tests/NormalTests/paczka1/fuzzy1/86172795.err
Error in line 2: dRRHn A631 41,5
Error in line 23: kphzR1D8 A406 19,2
Error in line 26: kphzR1D8 S7 78,5
